[project]
name = "distributed-event-deduplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "twisted>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]
authors = [
    { name = "Your Name", email = "muhammedfayiz122@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
where = "app"
